Revision history for {{$dist->name}}

{{$NEXT}}

1.210250  2021-01-25 16:12:50+00:00 Europe/London
- Improved version handling
- Improved error message
- Tests and fixes for use with 6.4.23

1.191660  2019-06-15 12:42:38+01:00 Europe/London
- Allow arrays within params
- Fixe tests for use with Opsview Monitor v6.x

1.190220  2019-01-22 11:35:52+00:00 Europe/London
- Add in $rest->opsview_version call
- Improve exception object for showing error details
- Add in build and install instructions to README

1.181000  2018-04-10 14:44:47+01:00 Europe/London

1.180580  2018-02-27 15:38:30+00:00 Europe/London