@@ -8,7 +8,7 @@ Opsview::RestAPI - Interact with the Opsview Rest API interface
 
 =head1 VERSION
 
-version 1.210260
+version 1.210670
 
 =head1 SYNOPSIS
 
@@ -16,7 +16,7 @@ version 1.210260
 
   my $rest=Opsview::RestAPI();
   # equivalent to
-  my $rest=Opsview::RestAPI(
+  my $rest=Opsview::RestAPI->new(
       url => 'http://localhost',
       username => 'admin',
       password => 'initial',
